# opengamecore

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.claude/: settings.local.json
.github/DISCUSSION_TEMPLATE/: compatibility-report.yml
.github/workflows/: ci.yml  release.yml  validate-bundles.yml
Formula/: opengamecore.rb
data/: compatibility.json
data/bundles/: baldurs-gate-3.toml  cyberpunk-2077.toml  elden-ring.toml  stardew-valley.toml  the-witcher-3-wild-hunt.toml
docs/superpowers/plans/: 2026-03-25-opengamecore.md  2026-03-28-viral-features.md
docs/superpowers/specs/: 2026-03-25-opengamecore-design.md  2026-03-28-viral-features-design.md
opengamecore-app/: Cargo.toml
opengamecore-app/src/: app.rs  main.rs  theme.rs
opengamecore-app/src/views/: add_game.rs  bottle_detail.rs  first_run.rs  game_database.rs  game_grid.rs  install_game.rs  mod.rs  settings.rs  sidebar.rs
opengamecore-cli/: Cargo.toml
opengamecore-cli/src/: main.rs
opengamecore-lib/: Cargo.toml
opengamecore-lib/src/: bottle.rs  bundle.rs  compat.rs  config.rs  data_update.rs  dxvk.rs  error.rs  fs_utils.rs  lib.rs  library.rs  paths.rs  runner.rs  store_detect.rs  wine.rs
opengamecore-lib/tests/: integration.rs
scripts/: bundle-macos.sh
