[package]
name = "opengamecore-lib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["stream"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
